--- a/app/views/user/dashboard.html.slim
+++ b/app/views/user/dashboard.html.slim
@@ -1,94 +1,7 @@
 #dashboard.container
   .row
     .col-md-2
-    #match-list.col-md-8
-      .card.profile-card.my-3
-        .card-body
-          .row.profile-card__info-row
-            .d-none.d-lg-flex.col-lg-3.profile-card__flag-container.px-0
-              - if current_user.team.present?
-                = image_tag current_user.team.flag, class: 'profile-card__flag'
-            .col-lg-9.profile-card__info-container
-              h5 Welcome, #{current_user.name}.
-              - if current_user.team.present?
-                .d-block.d-lg-none
-                  | Your team: #{current_user.team.short_name}
-                  = image_tag current_user.team.flag, class: 'profile-card__flag-icon'
-              .profile-card__rankings-header Your current rankings:
-              .profile-card__rankings.d-flex
-                - current_user.groups.each do |group|
-                  .pr-3.mr-3.rankings__group-container
-                    - rank = @current_user_ranks[group.id][:rank]
-                    - points = @current_user_ranks[group.id][:points]
-                    .rankings__group-name #{group.name}
-                    .rankings__rank #{rank}
-                    .rankings__point class="#{points.negative? ? 'red-text' : 'green-text'}"
-                      | (#{points})
-                .pr-3.mr-3.rankings__group-container
-                  - global_rank = @current_user_ranks[:global][:rank]
-                  - global_points = @current_user_ranks[:global][:points]
-                  .rankings__group-name Global
-                  .rankings__rank #{global_rank}
-                  .rankings__point class="#{global_points.negative? ? 'red-text' : 'green-text'}"
-                    | (#{global_points})
-      .card.predictions-card
-        .card-header.predictions-card__header
-          h5 Your Predictions
-          .prediction-card-header__sub-title
-            | Pending: 4/15
-          - if @matches_closing_soon.present?
-            .prediction-card-header__marquee.marquee
-              - closing_soon_list = @matches_closing_soon.map {|m| "#{m.team_1.short_name} vs #{m.team_2.short_name}(#{m.kick_off.strftime('%b %d')})"}.join(', ')
-              p Closing soon: #{closing_soon_list}
-        .card-body.predictions-card__body
-          ul.nav.nav-tabs.justify-content-center.match-list__tab-bar role='tablist' id='myTab'
-            li.nav-item.match-list__tab
-              a.nav-link.match-list__tab-link.font-weight-bold.active id="upcoming-tab" data-toggle="tab" href="#upcoming" role="tab" aria-controls="upcoming" aria-selected="true" Upcoming
-            - if @completed_matches.present?
-              li.nav-item
-                a.nav-link.font-weight-bold id="completed-tab" data-toggle="tab" href="#completed" role="tab" aria-controls="completed" aria-selected="true" Completed
-          .tab-content.match-list__tab-content id='myTabContent'
-            .tab-pane.fade.show.active id="upcoming" role="tabpanel" aria-labelledby="upcoming-tab"
-              - @upcoming_matches.each do |day, matches|
-                .card.match-list__header
-                  .card-header #{day.strftime('%b %d')}
-
-                - matches.each do |match|
-                  - prediction = current_user.predictions.where(match: match).first || Prediction.new
-                  .card.match-list__card
-                    .card-header.d-flex.justify-content-center.match-list__card-header class="#{prediction.persisted? ? 'match-list__card-header--predicted' : ''}" id="match#{match.id}-header" data-toggle="collapse" data-target="#match#{match.id}-details" aria-expanded="true" aria-controls="match#{match.id}-details"
-                      .d-none.d-md-block.my-auto.match-card__team-name.text-right #{match.team_1.full_name.capitalize}
-                      .d-md-none.my-auto.match-card__team-name.text-right #{match.team_1.short_name.upcase}
-                      = image_tag match.team_1.flag, class: 'match-card__flag match-card__left-flag'
-                      .match-card__kick-off.d-flex
-                        - if match.ongoing?
-                          .kick-off__live &#8226; LIVE
-                        - else
-                          .kick-off__time #{match.kick_off.strftime('%H:%M')}
-                      = image_tag match.team_2.flag, class: 'match-card__flag match-card__right-flag'
-                      .d-none.my-auto.d-md-block.match-card__team-name.text-left #{match.team_2.full_name.capitalize}
-                      .d-md-none.my-auto.match-card__team-name.text-left #{match.team_2.short_name.upcase}
-                    .collapse.js-match-details id="match#{match.id}-details" aria-labelledby="match#{match.id}-header" data-parent="#match-list"
-                      .card-body.match-card__card-body
-                        .row
-                          .col-md-2
-                          .col-md-8
-                            .prediction-form__notice class="#{prediction.persisted? ? 'prediction-form__notice--predicted' : ''}"
-                              .prediction-form__notice-title
-                                - if prediction.persisted?
-                                  - prediction_text = prediction.winner.present? ? "#{prediction.winner.full_name} will win." : "It will be a draw."
-                                  | Your prediction: #{prediction_text}
-                                - elsif !match.locked?
-                                  | Enter your predicted score below
-                                - else
-                                  | This match is locked for prediction
-                              .prediction-form__notice-subtext
-                                | Deadline: #{(match.kick_off - 15.minutes).strftime('%b %d, %H:%M')}
-                          .col-md-2
-                        - if !match.locked?
-                          = render 'prediction_form', prediction: prediction, match: match
-                        - else
-                          = render 'locked_matches_data', match: match, predictions: @predictions, groups: @groups
-            - if @completed_matches.present?
-              = render 'completed_matches_data', completed_matches: @completed_matches, results: @results, groups: @groups
-        .col-md-2
+    .col-md-8
+      = render 'user/dashboard/profile_card'
+      = render 'user/dashboard/predictions_card'
+    .col-md-2
