--- a/app/views/user/dashboard/_locked_match_predictions.html.slim
+++ b/app/views/user/dashboard/_locked_match_predictions.html.slim
@@ -1,10 +1,10 @@
 ul.nav.nav-tabs.justify-content-center.match-list__tabs role='tablist' id='predictionTabs'
-  - @groups.each_with_index do |group, index|
+  - @presenter.groups.each_with_index do |group, index|
     li.nav-item
       a.nav-link.font-weight-bold id="group#{group.id}-tab" data-toggle="tab" href="#group#{group.id}match#{match.id}" role="tab" class=(index == 0 ? 'active' : '') #{group.name}
 
 .tab-content id='predictionTabsContent'
-  - @predictions.each_with_index do |(group_id, predictions), index|
+  - @presenter.predictions_list.each_with_index do |(group_id, predictions), index|
     .tab-pane.fade id="group#{group_id}match#{match.id}" role="tabpanel" class=(index == 0 ? 'show active' : '')
       .table-responsive
         table.table.table-striped
