WIP: Allow draw score in knockout if decider is penalty

--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -222,11 +222,11 @@
   text-align: center;
 }
 
-.prediction-form__penalty-notice {
-  font-size: 12px;
-  font-weight: lighter;
-  margin: 5px 0;
-  text-align: center;
+.prediction-form__penalty-winner {
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 200px;
 }
 
 .profile-card {
