--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -9,9 +9,9 @@
   background-color: white;
   border-radius: 0;
   border: 0;
-  padding: 0;
-  margin: 1rem 3rem;
-  border-bottom: 1px solid darkgrey;
+  padding: 1rem 3rem;
+  margin-bottom: 1rem;
+  //border-bottom: 1px solid darkgrey;
 }
 
 .prediction-card-header__sub-title {
@@ -293,28 +293,4 @@
 @keyframes marquee {
   0%   { transform: translate(100%, 0); }
   100% { transform: translate(-400%, 0); }
-}
-
-.date-strip__item {
-  height: 75px;
-  border: 1px solid lightgrey;
-  .month {
-    font-size: smaller;
-  }
-  .day {
-    font-size: x-large;
-  }
-}
-
-.prediction-card__date-strip{
-  color: grey;
-  .slick-center {
-    color: #015386;
-  }
-}
-
-.match-strip__item {
-  height: 300px;
-  border: 1px solid grey;
-  color: #015386;
 }
