--- a/app/views/user/dashboard/_predictions_card.html.slim
+++ b/app/views/user/dashboard/_predictions_card.html.slim
@@ -2,7 +2,7 @@
   .card-header.predictions-card__header
     h5 Your Predictions
     .prediction-card-header__sub-title
-      | Pending: 4/15
+      | Pending: #{@presenter.pending_predictions_count}/#{@presenter.unlocked_matches.count}
     - if @presenter.closing_soon_text.present?
       .prediction-card-header__marquee.marquee
         p #{@presenter.closing_soon_text}
@@ -22,7 +22,7 @@
           i.fa.fa-chevron-right
 
     .prediction-card__match-strip
-      - @presenter.unlocked_matches.each do |day, matches|
+      - @presenter.unlocked_matches_by_day.each do |day, matches|
         .match-strip__item id="matches-#{day.strftime('%b%d')}"
           - matches.each do |match|
             - prediction = @presenter.prediction(match) || Prediction.new
