Show score of completed matches in match header

--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -115,6 +115,11 @@
   min-width: 34px;
 }
 
+.match__score {
+  margin: auto;
+  min-width: 34px;
+}
+
 .kick-off__live {
   margin: auto;
   min-width: 34px;
