--- a/app/views/user/rules.html.slim
+++ b/app/views/user/rules.html.slim
@@ -26,8 +26,7 @@
             li A player has to predict score and game decider(Regular Time, Extra Time, Penalty) in a knockout match.
             li Points are awarded in three parts: correct winning side, score and the decider.
             li Decider and score will be checked for correctness only if the winning side is predicted right.
-            li The predicted score should always have a winning side in a knockout match.
-            li If predicting a penalty, score will only be used to decide your winner. If the winner and the penalty decider is predicted correct, the score component will be deemed correct.
+            li If the selected decider is penalty, you need to predict the draw score till the end of 120 mins.
           hr
     .col-md-2
 
